# Spockesman

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_requirements.txt
example/: bot.py  config.py  main.py  message.py  message_buffer.py  requirements.txt
spockesman/: __init__.py  config.py  logger.py  processor.py
spockesman/bot/: __init__.py  message_result.py  messsage_queue.py
spockesman/common/: __init__.py  users.py
spockesman/context/: __init__.py  context.py  exceptions.py
spockesman/context/backend/: __init__.py  (+5 more)
spockesman/results/: __init__.py  result.py
spockesman/states/: __init__.py  awaiting_state.py  base_state.py  command.py  commands_bindings.py  concrete_state.py  cyclic_state.py  environment.py  metastates.py  pass_state.py  repeating_state.py  state.py  state_meta.py  transient_state.py  transitions.py
spockesman/typings/: __init__.py  base.py  handlers.py  processor.py
spockesman/util/: flatten.py  list.py  matchers.py  singleton.py  string.py
src/: __init__.py  config.py  processor.py
src/context/: context.py
src/states/: __init__.py  awaiting_state.py  command.py  concrete_state.py  environment.py  global_commands.py  state.py  transitions.py
src/util/: singleton.py
tests/: __init__.py  config.py  config.yaml  constants.py  context.py  state_calls.py  test_backend.py  test_config.py  test_constants.py  test_context.py  test_processor.py  test_state_calls.py  test_utils.py  util.py
tests/bot/: bot.py  config.py  config.yaml  main.py  message.py  token.py
(+17 files in other folders)
