[tool.poetry]
name = "spockesman"
version = "0.4.5"
description = "Declarative state-machine - mainly for chat bots"
authors = ["Beschastnov Igor Vladimirovich <i.beschastnov@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
redis = "^4.3"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
mypy = "^0.720.0"
pylint = "^2.4"
isort = "^4.3"
pytest = "^5.1"
pytest-mock = "^1.10"
pytest-cov = "^2.7"
pytest-deadfixtures = "^2.1"
unify = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
